    to a role to activate it)

2008-01-16 cjg
 * Added "volatile" flag to fields to indicate that the last modified should
    not be reset, the revision number increased nor the XML file snapshotted
    on account of a change to this field. It still causes the abstract page
    to be updated and the field to be indexed. Closes #3221

2008-01-16 cjg
 * Can now do sub-object searches on indexed fields. Fixing #3188

2008-01-16 cjg
 * Workflows now assign ID's to component level elements when the file is
    loaded rather than ad-hoc. This fixes #3216.

2008-01-17 tdb
 * Fixed a problem with parsing BibTeX names that contained braces
 * Change OAI record headers to use yyyy-mm-dd, fixing #3227
 * Keep the data from a Test import, fixing #3134
 * Don't exit on bad XML when using render_xhtml_field, fixing #3147
 * Added Microsoft Excel document format, fixing #3217
 * Using a pin with content twice will no longer repeat content, fixing #3027

2008-01-17 cjg
 * Fixed a small bug in the Update::Static code which didn't work for .html
    files. or index.html files being called "/"
 
2008-01-17 cjg
 * Added an "id" attribute to <select> fields, which means that they can be
    found with prototype $F() method -- fixing some issues with autocomplete.

2008-01-18 cjg
 * Added missing phrase for reload-config screen.
 * Added Links to documentation from config editor.
 * Improved layout of config browse.

2008-01-18 cjg
 * Multiple field tables now get a primary key, although this isn't created
    if you upgrade (yet).
	
2008-01-18 cjg
 * User "admin" role now can view config, but requires a edit-config role to
    be allowed to change it via CGI.

2008-01-18 cjg
 * Workflow config reloads if changed on disk. Closes #3182
 * Citation config reloads if changed on disk. Closes #3181 

2008-01-22 tdb
 * Added handler to test data import tool, fixing #3241
 * When finding the parts of a date/time allow splitting on 'T' and 'Z' (time)
