@@ -6855,4 +6855,5 @@ PACKAGE: 2.2.99.2
 2008-01-22 tdb
  * Added handler to test data import tool, fixing #3241
  * When finding the parts of a date/time allow splitting on 'T' and 'Z' (time)
+ * Allow date/datetime search terms to include a time component
 
